--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "axios": "^1.6.2",
+    "connect-history-api-fallback": "^2.0.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "spotify-web-api-node": "^5.0.2"
+    "query-string": "^8.1.0",
+    "querystring": "^0.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
