--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "styled-components": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
